fixes for landscape type screen on mobile devices

--- a/assets/styles/layouts/_image-carousel.scss
+++ b/assets/styles/layouts/_image-carousel.scss
@@ -14,6 +14,11 @@
 
     &__items--modal {
 
+        .slick-list {
+            max-height: 100%;
+            overflow-y: scroll;
+        }
+
         @include until($tablet) {
             .slick-prev {
                 left:0;
@@ -22,6 +27,10 @@
             .slick-next {
                 right: 0;
             }
+        }
+
+        .slick-slide {
+            padding:0 !important;
         }
        
         .image-carousel__item {
@@ -37,13 +46,14 @@
             max-height: 100%;
             height:auto;
             min-width: 0;
-            min-height: 0;
+            min-height: 50%;
             display: flex;
             align-items: flex-end;
 
             img{
                 max-width: 100%;
                 max-height: 100% !important;
+                min-height: 100px;
                 object-fit: contain;
             }
         }
